deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sci-monitor-deployment
  labels:
    app: k8sci-monitor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: k8sci-monitor
  template:
    metadata:
      labels:
        app: k8sci-monitor
    spec:
      containers:
        - name: k8sci-monitor
          image: hirdesh135/k8sci-monitor:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
