service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sci-monitor-service
spec:
  type: NodePort
  selector:
    app: k8sci-monitor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080  # Access via http://<EC2-IP>:30080
