ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sci-monitor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8sci.local    # You can change this to your domain or EC2 public DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8sci-monitor-service
                port:
                  number: 80
